<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_menu_home" />

        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_menu_appointments" />

        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_menu_schedules" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:title="Profile" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_menu_logout" />
                />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_menu_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_menu_travlendar" />
        </menu>
    </item>

</menu>